2007-02-14  Bruno JOFRET  <bruno.jofret@inria.fr>

	* src/test/test*.c :
	Add some FIXME in order to remember to code some tests.
	* src/test/testFind.c :
	Testing of the find function.
	* src/test/testIsEmpty.c :
	Testing of the isEmpty function.
	* src/misc :
	Create for misc includes.
	* src/auxiliaryFunctions/find/notFound.h :
	Moved
	* src/misc/notFound.h :
	Better use here.
	* */*/Makefile :
	Modify all Makefiles. Remove -pedantic.
	Must be crazy to use this...
	* src/auxiliaryFunctions/isempty :
	IsEmpty functions implementation.
	* src/auxiliaryFunctions/isempty/{sdcz}isEmptya.c :
	Implementation : s(float) d(double)
			 c(floatComplex) z(doubleComplex)

2007-02-13  Bruno JOFRET  <bruno.jofret@inria.fr>

	* src/elementaryFunctions/tanh/ztanhs.c :
	Fixed with C99 Complex but Scilab computation.
	* src/elementaryFunctions/tanh/ctanhs.c :
	Fixed with C99 Complex but Scilab computation.
	* src/auxiliaryFunctions/find :
	Find not null element in list.
	* src/auxiliaryFunctions/find/{sdcz}finda.c :
	Implementation : s(float) d(double)
			 c(floatComplex) z(doubleComplex)
	* src/auxiliaryFunctions/find/find.h :
	Interface.
	* src/auxiliaryFunctions/find/notFound.h :
	Constant if all elements are not null.

2007-02-12  Bruno JOFRET  <bruno.jofret@inria.fr>

	* src/elementaryFunctions/sinh/zsinhs.c
	Fixed with C99 Complex but Scilab computation.
	* src/elementaryFunctions/sinh/csinhs.c
	Fixed with C99 Complex but Scilab computation.

2007-02-09  Bruno JOFRET  <bruno.jofret@inria.fr>

	* src/elementaryFunctions/exp/cexps.c :
	Implementation.
	* src/elementaryFunctions/exp/zexps.c :
	Implementation.

2007-02-08  Bruno JOFRET  <bruno.jofret@inria.fr>

	* src/auxiliaryFunctions/sign :
	Signe of a float or double.
	* src/auxiliaryFunctions/sign/sign.h :
	Interface
	* src/auxiliaryFunctions/sign/{sd}signs.c :
	Implementation : s(float) d(double)

2007-02-07  Bruno JOFRET  <bruno.jofret@inria.fr>

	* src/auxiliaryFunctions :
	Some misc Functions used in many cases.
